--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,10 @@ env:
     - TEST_SUITE=mypy
 
 python:
-  - "2.7"
+  #- "2.7"
   - "3.4"
   - "3.5"
-
-matrix:
-  exclude:
-    - python: "2.7"
-      env: TEST_SUITE=mypy
+  - "3.5-dev"
 
 # commands to install dependencies
 before_install:
