error in small.ini

--- a/tests/small.ini
+++ b/tests/small.ini
@@ -82,7 +82,7 @@ rnn_size=256
 max_input_len=20
 embedding_size=200
 dropout_keep_p=0.5
-attention_type=decoding_function.Attention
+attention_type=decoding_function.Attentioner
 data_id=source
 vocabulary=<encoder_vocabulary>
 
