in-graph beam search

--- a/tests/small.ini
+++ b/tests/small.ini
@@ -37,13 +37,17 @@ val_dataset=<val_data>
 trainer=<trainer>
 runner=<runner>
 postprocess=None
-evaluation=[<bleu>]
+evaluation=[<bleu1>, <bleu>]
 logging_period=20
 validation_period=60
 random_seed=1234
 
 [bleu]
 class=evaluators.bleu.BLEUEvaluator
+
+[bleu1]
+class=evaluators.bleu.BLEUEvaluator
+n=1
 
 [train_data]
 ; This is a definition of the training data object. Dataset is not a standard
@@ -101,6 +105,7 @@ rnn_size=211
 embedding_size=317
 use_attention=True
 maxout_size=197
+beam_size=10
 dropout_keep_p=0.5
 data_id=target
 max_output_len=10
