--- a/tests/small-beam.ini
+++ b/tests/small-beam.ini
@@ -15,11 +15,11 @@ class=evaluators.bleu.BLEUEvaluator
 
 [encoder_vocabulary]
 class=vocabulary.from_file
-path=tests/tmp-test-output/encoder_vocabulary.pickle
+path=tests/tmp-encoder-vocabulary/encoder_vocabulary.pickle
 
 [decoder_vocabulary]
 class=vocabulary.from_file
-path=tests/tmp-test-output/decoder_vocabulary.pickle
+path=tests/tmp-decoder-vocabulary/decoder_vocabulary.pickle
 
 [encoder]
 class=encoders.sentence_encoder.SentenceEncoder
@@ -27,22 +27,23 @@ name=sentence_encoder
 rnn_size=256
 max_input_len=10
 embedding_size=200
+dropout_keep_p=0.5
 attention_type=decoding_function.Attention
 data_id=source
 vocabulary=<encoder_vocabulary>
-dropout_keep_p=0.5
 
 [decoder]
 class=decoders.decoder.Decoder
 name=decoder
 encoders=[<encoder>]
-rnn_size=256
-max_output_len=10
-embedding_size=256
+project_encoder_outputs=True
+rnn_size=211
+embedding_size=317
 use_attention=True
-data_id=target
-vocabulary=<decoder_vocabulary>
 dropout_keep_p=0.5
+data_id=target
+max_output_len=10
+vocabulary=<decoder_vocabulary>
 
 [runner]
 class=runners.singleton_beam_search_runner.BeamSearchRunner
