--- a/tests/small.ini
+++ b/tests/small.ini
@@ -10,7 +10,7 @@ epochs=2
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
-runners=[<runner_1>,<runner_2>]
+runners=[<runner_1>,<runner_2>,<runner3>]
 postprocess=None
 evaluation=[(target, <bleu>)]
 logging_period=20
@@ -108,9 +108,14 @@ rho=0.95
 ; a given dataset.
 class=runners.rnn_runner.RuntimeRnnRunner
 decoder=<decoder>
-output_series=target
+output_series=target_runtime
 
 [runner_2]
 class=runners.runner.GreedyRunner
 decoder=<decoder>
 output_series=target_greedy
+
+[runner_3]
+class=runners.rnn_runner.RuntimeRnnSampler
+decoder=<decoder>
+output_series=target_sampler
