fix runner name in ini

--- a/tests/small.ini
+++ b/tests/small.ini
@@ -6,11 +6,11 @@ tf_manager=<tf_manager>
 output=tests/tmp-test-output
 overwrite_output_dir=True
 batch_size=16
-epochs=2
+epochs=20
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
-runners=[<runner_1>,<runner_2>,<runner3>]
+runners=[<runner_1>,<runner_2>,<runner_3>]
 postprocess=None
 evaluation=[(target, <bleu>)]
 logging_period=20
@@ -120,4 +120,4 @@ output_series=target_greedy
 [runner_3]
 class=runners.rnn_runner.RuntimeRnnSampler
 decoder=<decoder>
-output_series=target_sampler
+output_series=target_sample
