bandit learning with partial_run

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -5,7 +5,7 @@ name=translation
 tf_manager=<tf_manager>
 output=tests/tmp-test-output
 overwrite_output_dir=True
-batch_size=1
+batch_size=20
 epochs=20
 train_dataset=<train_data>
 val_dataset=<val_data>
@@ -99,7 +99,8 @@ class=trainers.bandit.ExpectedLossTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 clip_norm=1.0
-optimizer=<adadelta>
+optimizer=<sgd>
+learning_rate=1.0e-2
 
 [adadelta]
 class=config.utils.adadelta_optimizer
@@ -108,6 +109,9 @@ rho=0.95
 
 [adam]
 class=config.utils.adam_optimizer
+
+[sgd]
+class=config.utils.sgd_optimizer
 
 [runner_1]
 ; This block is used for both validation and testing to run the model on
