updated bandit ini to use quotes

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -1,23 +1,24 @@
 ;; Small training test
 
 [main]
-name=translation
+name="translation"
 tf_manager=<tf_manager>
-output=tests/tmp-test-output
+output="tests/tmp-test-output"
 overwrite_output_dir=True
 batch_size=20
-epochs=20
+epochs=10
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
 runners=[<runner_1>,<runner_2>,<runner_3>]
 postprocess=None
-evaluation=[(target, <bleu>)]
+evaluation=[("target", <bleu>)]
 logging_period=20
 validation_period=60
 runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
 random_seed=1234
+initial_variables="tests/tmp-test-output/variables.data.cont-78.best"
 
 [tf_manager]
 class=tf_manager.TensorFlowManager
@@ -34,73 +35,76 @@ class=evaluators.bleu.BLEUEvaluator
 ; output file for a series, use "s_" prefix and "_out" suffix, e.g.
 ; "s_target_out"
 class=config.utils.dataset_from_files
-s_source=tests/data/train.tc.en
-s_target=tests/data/train.tc.de
-preprocessors=[(source, source_chars, processors.helpers.preprocess_char_based)]
+s_source="tests/data/train.tc.en"
+s_target="tests/data/train.tc.de"
+preprocessors=[("source", "source_chars", processors.helpers.preprocess_char_based)]
 lazy=True
 
 [val_data]
 ; Validation data, the languages are not necessary here, encoders and decoders
 ; access the data series via the string identifiers defined here.
 class=config.utils.dataset_from_files
-s_source=tests/data/val.tc.en
-s_target=tests/data/val.tc.de
-preprocessors=[(source, source_chars, processors.helpers.preprocess_char_based)]
+s_source="tests/data/val.tc.en"
+s_target="tests/data/val.tc.de"
+preprocessors=[("source", "source_chars", processors.helpers.preprocess_char_based)]
 
 [val_data_no_target]
 ; Validation data, the languages are not necessary here, encoders and decoders
 ; access the data series via the string identifiers defined here.
 class=config.utils.dataset_from_files
-s_source=tests/data/val.tc.en
+s_source="tests/data/val.tc.en"
 
 [encoder_vocabulary]
 class=config.utils.vocabulary_from_dataset
 datasets=[<train_data>]
-series_ids=[source]
+series_ids=["source"]
 max_size=60
-save_file=tests/tmp-test-output/encoder_vocabulary.pickle
+save_file="tests/tmp-test-output/encoder_vocabulary.pickle"
 overwrite=True
 
 [encoder]
 class=encoders.sentence_encoder.SentenceEncoder
-name=sentence_encoder
+name="sentence_encoder"
 rnn_size=7
 max_input_len=10
 embedding_size=11
 dropout_keep_prob=0.5
 attention_type=decoding_function.Attention
-data_id=source
+data_id="source"
 vocabulary=<encoder_vocabulary>
 
 [decoder_vocabulary]
 class=config.utils.vocabulary_from_dataset
 datasets=[<train_data>]
-series_ids=[target]
+series_ids=["target"]
 max_size=70
-save_file=tests/tmp-test-output/decoder_vocabulary.pickle
+save_file="tests/tmp-test-output/decoder_vocabulary.pickle"
 overwrite=True
 
 [decoder]
 class=decoders.decoder.Decoder
-name=decoder
+name="decoder"
 encoders=[<encoder>]
-project_encoder_outputs=True
+#output_projection=<dec_maxout_output>
 rnn_size=8
 embedding_size=9
 use_attention=True
 dropout_keep_prob=0.5
-data_id=target
+data_id="target"
 max_output_len=10
 vocabulary=<decoder_vocabulary>
 
+[dec_maxout_output]
+class=decoders.output_projection.maxout_output
+maxout_size=7
+
 [trainer]
 ; This block just fills the arguments of the trainer __init__ method.
-class=trainers.bandit.ExpectedLossTrainer
+class=trainers.bandit.PairwiseTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 clip_norm=1.0
 optimizer=<sgd>
-learning_rate=1.0e-2
 
 [adadelta]
 class=config.utils.adadelta_optimizer
@@ -109,25 +113,27 @@ rho=0.95
 
 [adam]
 class=config.utils.adam_optimizer
+learning_rate=1.0e-4
 
 [sgd]
 class=config.utils.sgd_optimizer
+learning_rate=1.0e-6
 
 [runner_1]
 ; This block is used for both validation and testing to run the model on
 ; a given dataset.
 class=runners.rnn_runner.RuntimeRnnRunner
 decoder=<decoder>
-output_series=target
+output_series="target"
 postprocess=processors.helpers.untruecase
 
 
 [runner_2]
 class=runners.runner.GreedyRunner
 decoder=<decoder>
-output_series=target_greedy
+output_series="target_greedy"
 
 [runner_3]
 class=runners.rnn_runner.RuntimeRnnSampler
 decoder=<decoder>
-output_series=target_sample
+output_series="target_sample"
