new evaluators in bandit.ini

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -6,14 +6,14 @@ tf_manager=<tf_manager>
 output="tests/tmp-test-output"
 overwrite_output_dir=True
 batch_size=20
-epochs=10
+epochs=2
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
 runners=[<runner_1>,<runner_2>,<runner_3>]
 postprocess=None
-evaluation=[("target", <bleu>)]
-logging_period=20
+evaluation=[("target", <multeval_bleu>), ("target", <bleu>)]
+logging_period=200
 validation_period=60
 runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
@@ -22,11 +22,26 @@ initial_variables="tests/tmp-test-output/variables.data.cont-78.best"
 
 [tf_manager]
 class=tf_manager.TensorFlowManager
-num_threads=4
+num_threads=1
 num_sessions=1
 
 [bleu]
 class=evaluators.bleu.BLEUEvaluator
+
+[multeval_bleu]
+class=evaluators.multeval.MultEvalWrapper
+metric="bleu"
+wrapper="scripts/multeval-0.5.1/multeval.sh"
+
+[multeval_meteor]
+class=evaluators.multeval.MultEvalWrapper
+metric="meteor"
+wrapper="scripts/multeval-0.5.1/multeval.sh"
+language="en"
+
+[beer]
+class=evaluators.beer.BeerWrapper
+wrapper="scripts/beer_2.0/beer"
 
 [train_data]
 ; This is a definition of the training data object. Dataset is not a standard
@@ -100,7 +115,7 @@ maxout_size=7
 
 [trainer]
 ; This block just fills the arguments of the trainer __init__ method.
-class=trainers.bandit.PairwiseTrainer
+class=trainers.bandit.ExpectedLossTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 clip_norm=1.0
