--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -18,7 +18,7 @@ validation_period=60
 runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
 random_seed=1234
-initial_variables="tests/tmp-test-output/variables.data.cont-78.best"
+#initial_variables="tests/tmp-test-output/variables.data.cont-78.best"
 
 [tf_manager]
 class=tf_manager.TensorFlowManager
@@ -119,7 +119,7 @@ class=trainers.bandit.ExpectedLossTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 clip_norm=1.0
-optimizer=<sgd>
+optimizer=<adam>
 
 [adadelta]
 class=config.utils.adadelta_optimizer
