binary feedback parameter

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -12,8 +12,8 @@ val_dataset=<val_data>
 trainer=<trainer>
 runners=[<runner_1>,<runner_2>,<runner_3>]
 postprocess=None
-evaluation=[("target", <multeval_bleu>), ("target", <bleu>)]
-logging_period=200
+evaluation=[("target", <bleu>)]
+logging_period=20
 validation_period=60
 runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
@@ -115,11 +115,12 @@ maxout_size=7
 
 [trainer]
 ; This block just fills the arguments of the trainer __init__ method.
-class=trainers.bandit.ExpectedLossTrainer
+class=trainers.bandit.PairwiseTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 clip_norm=1.0
 optimizer=<adam>
+binary_feedback=False
 
 [adadelta]
 class=config.utils.adadelta_optimizer
