added GLEU (google nmt) and fixed reward call

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -6,7 +6,7 @@ tf_manager=<tf_manager>
 output="tests/tmp-test-output"
 overwrite_output_dir=True
 batch_size=20
-epochs=2
+epochs=20
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
@@ -18,7 +18,7 @@ validation_period=60
 runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
 random_seed=1234
-#initial_variables="tests/tmp-test-output/variables.data.cont-78.best"
+initial_variables="tests/tmp-test-output/variables.data.cont-136.best"
 
 [tf_manager]
 class=tf_manager.TensorFlowManager
@@ -27,6 +27,9 @@ num_sessions=1
 
 [bleu]
 class=evaluators.bleu.BLEUEvaluator
+
+[gleu]
+class=evaluators.gleu.GLEUEvaluator
 
 [multeval_bleu]
 class=evaluators.multeval.MultEvalWrapper
@@ -115,12 +118,13 @@ maxout_size=7
 
 [trainer]
 ; This block just fills the arguments of the trainer __init__ method.
-class=trainers.bandit.PairwiseTrainer
+class=trainers.bandit.ExpectedLossTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 clip_norm=1.0
 optimizer=<adam>
 binary_feedback=False
+evaluator=("target", <gleu>)
 
 [adadelta]
 class=config.utils.adadelta_optimizer
@@ -142,7 +146,6 @@ class=runners.rnn_runner.RuntimeRnnRunner
 decoder=<decoder>
 output_series="target"
 postprocess=processors.helpers.untruecase
-
 
 [runner_2]
 class=runners.runner.GreedyRunner
