--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -18,6 +18,7 @@ validation_period=60
 runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
 random_seed=1234
+store_gradients=False
 #initial_variables="tests/tmp-test-output/variables.data.cont-136.best"
 
 [tf_manager]
