--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -19,6 +19,7 @@ runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
 random_seed=1234
 store_gradients=False
+batch_reward=True
 #initial_variables="tests/tmp-test-output/variables.data.cont-136.best"
 
 [tf_manager]
