--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -19,7 +19,7 @@ runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
 random_seed=1234
 store_gradients=False
-batch_reward=True
+batch_reward=False
 #initial_variables="tests/tmp-test-output/variables.data.cont-136.best"
 
 [tf_manager]
@@ -113,6 +113,7 @@ dropout_keep_prob=0.5
 data_id="target"
 max_output_len=10
 vocabulary=<decoder_vocabulary>
+sample_size=20
 
 [dec_maxout_output]
 class=decoders.output_projection.maxout_output
@@ -126,8 +127,8 @@ l2_weight=1.0e-8
 initial_temperature=1.0e-4
 clip_norm=1.0
 optimizer=<adam>
-binary_feedback=False
-evaluator=("target", <gleu>)
+binary_feedback=True
+evaluator=("target", <bleu>)
 
 [adadelta]
 class=config.utils.adadelta_optimizer
