fix of bug introduced when gradient tracking was implemented

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -121,7 +121,7 @@ maxout_size=7
 
 [trainer]
 ; This block just fills the arguments of the trainer __init__ method.
-class=trainers.bandit.ExpectedLossTrainer
+class=trainers.CrossEntropyTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 initial_temperature=1.0e-4
