copy unks from source to target (only for greedy runner)

--- a/tests/small.ini
+++ b/tests/small.ini
@@ -6,17 +6,19 @@ tf_manager=<tf_manager>
 output="tests/tmp-test-output"
 overwrite_output_dir=True
 batch_size=16
-epochs=2
+epochs=3
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
 runners=[<runner>]
 postprocess=None
+copypostprocess=<unk_postprocessor>
 evaluation=[("target", <bleu>), ("target", evaluators.ter.TER)]
 logging_period=20
 validation_period=60
 runners_batch_size=1
 random_seed=1234
+
 
 [tf_manager]
 class=tf_manager.TensorFlowManager
@@ -54,7 +56,7 @@ path="tests/tmp-vocab/encoder_vocab.pkl"
 class=encoders.sentence_encoder.SentenceEncoder
 name="sentence_encoder"
 rnn_size=7
-max_input_len=10
+max_input_len=17
 embedding_size=11
 dropout_keep_prob=0.5
 attention_type=decoding_function.Attention
@@ -85,6 +87,9 @@ l2_weight=1.0e-8
 clip_norm=1.0
 
 [runner]
-class=runners.runner.GreedyRunner
+class=runners.rnn_runner.RuntimeRnnRunner
 decoder=<decoder>
 output_series="target"
+
+[unk_postprocessor]
+class=processors.unk_copy.UNKCopyPostProcessor
