greedy in bandit log also unk-replaced

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -12,6 +12,7 @@ val_dataset=<val_data>
 trainer=<trainer>
 runners=[<runner_1>,<runner_2>,<runner_3>]
 postprocess=None
+copypostprocess=<post>
 evaluation=[("target", <bleu>)]
 logging_period=20
 validation_period=60
@@ -21,6 +22,9 @@ random_seed=1234
 store_gradients=False
 batch_reward=False
 #initial_variables="tests/tmp-test-output/variables.data.cont-136.best"
+
+[post]
+class=processors.unk_copy.UNKCopyPostProcessor
 
 [tf_manager]
 class=tf_manager.TensorFlowManager
@@ -113,7 +117,7 @@ dropout_keep_prob=0.5
 data_id="target"
 max_output_len=10
 vocabulary=<decoder_vocabulary>
-sample_size=20
+sample_size=1
 
 [dec_maxout_output]
 class=decoders.output_projection.maxout_output
@@ -121,7 +125,7 @@ maxout_size=7
 
 [trainer]
 ; This block just fills the arguments of the trainer __init__ method.
-class=trainers.CrossEntropyTrainer
+class=trainers.bandit.ExpectedLossTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 initial_temperature=1.0e-4
@@ -148,13 +152,13 @@ learning_rate=1.0e-6
 ; a given dataset.
 class=runners.rnn_runner.RuntimeRnnRunner
 decoder=<decoder>
-output_series="target"
+output_series="target_greedy"
 postprocess=processors.helpers.untruecase
 
 [runner_2]
 class=runners.runner.GreedyRunner
 decoder=<decoder>
-output_series="target_greedy"
+output_series="target"
 
 [runner_3]
 class=runners.rnn_runner.RuntimeRnnSampler
