iterations to steps for variance computation

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -10,7 +10,7 @@ epochs=20
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
-runners=[<runner_1>,<runner_2>,<runner_3>]
+runners=[<runner_1>,<runner_2>]
 postprocess=None
 copypostprocess=<post>
 evaluation=[("target", <bleu>)]
@@ -19,7 +19,6 @@ validation_period=60
 runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
 random_seed=1234
-store_gradients=False
 batch_reward=False
 #initial_variables="tests/tmp-test-output/variables.data.cont-136.best"
 
@@ -133,6 +132,7 @@ clip_norm=1.0
 optimizer=<adam>
 binary_feedback=True
 evaluator=("target", <bleu>)
+score_function=False
 
 [adadelta]
 class=config.utils.adadelta_optimizer
@@ -159,8 +159,3 @@ postprocess=processors.helpers.untruecase
 class=runners.runner.GreedyRunner
 decoder=<decoder>
 output_series="target"
-
-[runner_3]
-class=runners.rnn_runner.RuntimeRnnSampler
-decoder=<decoder>
-output_series="target_sample"
