unk replace with ibm1 lexical translations

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -14,7 +14,7 @@ runners=[<runner_1>,<runner_2>]
 postprocess=None
 copypostprocess=<post>
 evaluation=[("target", <bleu>)]
-logging_period=20
+logging_period=2
 validation_period=60
 runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
@@ -24,6 +24,7 @@ batch_reward=False
 
 [post]
 class=processors.unk_copy.UNKCopyPostProcessor
+lexical_translations="tests/data/ibm_test.txt"
 
 [tf_manager]
 class=tf_manager.TensorFlowManager
