--- a/tests/small.ini
+++ b/tests/small.ini
@@ -10,7 +10,7 @@ epochs=2
 train_dataset=<train_data>
 val_dataset=<val_data>
 trainer=<trainer>
-runners=[<runner_1>,<runner_2>,<runner_3>]
+runners=[<runner_1>,<runner_2>]
 postprocess=None
 evaluation=[("target", <bleu>), ("target", evaluators.ter.TER)]
 logging_period=20
@@ -98,12 +98,20 @@ class=trainers.cross_entropy_trainer.CrossEntropyTrainer
 decoders=[<decoder>]
 l2_weight=1.0e-8
 clip_norm=1.0
-optimizer=<adadelta>
+optimizer=<adam>
 
 [adadelta]
 class=config.utils.adadelta_optimizer
 epsilon=1.0e-6
 rho=0.95
+
+[adam]
+class=config.utils.adam_optimizer
+learning_rate=1.0e-4
+
+[sgd]
+class=config.utils.sgd_optimizer
+learning_rate=1.0e-6
 
 [runner_1]
 ; This block is used for both validation and testing to run the model on
@@ -117,8 +125,3 @@ postprocess=processors.helpers.untruecase
 class=runners.runner.GreedyRunner
 decoder=<decoder>
 output_series="target_greedy"
-
-[runner_3]
-class=runners.rnn_runner.RuntimeRnnSampler
-decoder=<decoder>
-output_series="target_sample"
