refactoring and cleaning

--- a/tests/small-bandit.ini
+++ b/tests/small-bandit.ini
@@ -20,7 +20,6 @@ runners_batch_size=1
 test_datasets=[<val_data>,<val_data_no_target>]
 random_seed=1234
 batch_reward=False
-#initial_variables="tests/tmp-test-output/variables.data.cont-136.best"
 
 [post]
 class=processors.unk_copy.UNKCopyPostProcessor
@@ -133,6 +132,7 @@ clip_norm=1.0
 optimizer=<adam>
 binary_feedback=True
 evaluator=("target", <bleu>)
+baseline=False
 score_function=False
 
 [adadelta]
