mrt example with ce-smoothing and alpha

--- a/tests/mrt.ini
+++ b/tests/mrt.ini
@@ -77,7 +77,9 @@ class=trainers.minimum_risk_trainer.expected_loss_objective
 decoder=<decoder>
 reward_function=<reward>
 number_of_samples=2
-temperature=0.005
+alpha=0.005
+ce_smoothing=0.0
+control_variate="baseline"
 
 [reward]
 class=evaluators.gleu.GLEUEvaluator
