added el with http requests for feedback

--- a/tests/bandit_serving.ini
+++ b/tests/bandit_serving.ini
@@ -1,9 +1,9 @@
 [main]
-name="translation with DPM training"
+name="translation with bandit training"
 tf_manager=<tf_manager>
-output="tests/outputs/dpm"
+output="tests/outputs/bandit-serving"
 overwrite_output_dir=True
-batch_size=5
+batch_size=16
 epochs=2
 train_dataset=<train_data>
 val_dataset=<val_data>
@@ -15,7 +15,6 @@ logging_period=20
 validation_period=60
 runners_batch_size=1
 random_seed=1234
-feedback=True
 
 [tf_manager]
 class=tf_manager.TensorFlowManager
@@ -29,9 +28,8 @@ class=evaluators.bleu.BLEUEvaluator
 class=dataset.load_dataset_from_files
 s_source="tests/data/train.tc.en"
 s_target="tests/data/train.tc.de"
-s_reward="tests/data/train.bleus"
 preprocessors=[("source", "source_chars", processors.helpers.preprocess_char_based)]
-#lazy=True
+lazy=True
 
 [val_data]
 class=dataset.load_dataset_from_files
@@ -75,9 +73,16 @@ max_output_len=10
 vocabulary=<decoder_vocabulary>
 
 [bandit]
-class=trainers.bandit_trainer.dpm_objective
+class=trainers.bandit_trainer.expected_loss_objective
 decoder=<decoder>
-control_variate="reweighting"
+reward_function=<reward>
+control_variate="baseline"
+simulate_from_ref=False
+service_url="http://127.0.0.1:5000/run"
+
+[reward]
+class=evaluators.gleu.GLEUEvaluator
+name="GLEU"
 
 [trainer]
 class=trainers.generic_trainer.GenericTrainer
