--- a/tests/mrt.ini
+++ b/tests/mrt.ini
@@ -80,6 +80,8 @@ number_of_samples=2
 alpha=0.005
 ce_smoothing=0.0
 control_variate="baseline"
+temperature=0.5
+renormalize=False
 simulate_from_ref=True
 
 [reward]
