--- a/tests/rl.ini
+++ b/tests/rl.ini
@@ -3,9 +3,12 @@ name="translation with RL training"
 tf_manager=<tf_manager>
 output="tests/outputs/rl"
 overwrite_output_dir=True
-batch_size=16
+batch_size=10
 epochs=2
 train_dataset=<train_data>
+train_buffer=<train_buffer>
+buffer_trainer=<buffer_trainer>
+buffer_freq=10
 val_dataset=<val_data>
 trainer=<trainer>
 runners=[<runner>]
@@ -25,14 +28,17 @@ num_sessions=1
 class=dataset.load_dataset_from_files
 s_source="tests/data/train.tc.en"
 s_target="tests/data/train.tc.de"
-preprocessors=[("source", "source_chars", processors.helpers.preprocess_char_based)]
 lazy=True
+
+[train_buffer]
+class=dataset.buffer.TrainingBuffer
+max_size=10
+log_file="buffer.log"
 
 [val_data]
 class=dataset.load_dataset_from_files
 s_source="tests/data/val.tc.en"
 s_target="tests/data/val.tc.de"
-preprocessors=[("source", "source_chars", processors.helpers.preprocess_char_based)]
 
 [encoder_vocabulary]
 class=vocabulary.from_wordlist
@@ -72,11 +78,18 @@ vocabulary=<decoder_vocabulary>
 [rl]
 class=trainers.rl_trainer.rl_objective
 decoder=<decoder>
+src_vocabulary=<encoder_vocabulary>
+trg_vocabulary=<decoder_vocabulary>
+buffer=<train_buffer>
 reward_function=<reward>
 subtract_baseline=True
 normalize=False
-sample_size=2
-ce_smoothing=0.5
+sample_size=1
+ce_smoothing=0.0
+
+[wxent]
+class=trainers.rl_trainer.wxent_objective
+decoder=<decoder>
 
 [reward]
 class=evaluators.gleu.GLEUEvaluator
@@ -88,6 +101,20 @@ objectives=[<rl>]
 l2_weight=1.0e-8
 clip_norm=1.0
 optimizer=<adam>
+
+[buffer_trainer]
+class=trainers.generic_trainer.GenericTrainer
+objectives=[<wxent>]
+l2_weight=1.0e-8
+clip_norm=1.0
+optimizer=<buffer_adam>
+
+[buffer_adam]
+class=tf.train.AdamOptimizer
+beta1=0.9
+beta2=0.98
+epsilon=1.0e-9
+learning_rate=0.2
 
 [adam]
 class=tf.train.AdamOptimizer
