adding greedy option and entropy regularization

--- a/tests/rl.ini
+++ b/tests/rl.ini
@@ -4,11 +4,11 @@ tf_manager=<tf_manager>
 output="tests/outputs/rl"
 overwrite_output_dir=True
 batch_size=10
-epochs=2
+epochs=3
 train_dataset=<train_data>
 train_buffer=<train_buffer>
 buffer_trainer=<buffer_trainer>
-buffer_freq=10
+buffer_freq=20
 val_dataset=<val_data>
 trainer=<trainer>
 runners=[<runner>]
@@ -16,7 +16,7 @@ postprocess=None
 evaluation=[("target", evaluators.BLEU)]
 logging_period=20
 validation_period=60
-runners_batch_size=1
+runners_batch_size=2
 random_seed=1234
 
 [tf_manager]
@@ -86,6 +86,8 @@ subtract_baseline=True
 normalize=False
 sample_size=1
 ce_smoothing=0.0
+entropy_regularization=0.0
+greedy=False
 
 [wxent]
 class=trainers.rl_trainer.wxent_objective
@@ -107,7 +109,7 @@ class=trainers.generic_trainer.GenericTrainer
 objectives=[<wxent>]
 l2_weight=1.0e-8
 clip_norm=1.0
-optimizer=<buffer_adam>
+optimizer=<adam>
 
 [buffer_adam]
 class=tf.train.AdamOptimizer
